--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <form action="/translate" method="post">
-<h1 align="center">"Por que você não amadurece" - Tradutor</h1>
+<h1 align="center">"Por que você não amadurece" - Translator</h1>
 
+ <div style="overflow-x:auto;">
  <table style="width:100%">
   <tr>
     <th>Texto</th>
@@ -14,6 +15,7 @@
   </tr>
   
 </table>
+</div>
 
 <center>
 <br>
@@ -21,3 +23,11 @@
 <br>
 <input type="submit" name="Submit" value="Traduzir"></center>
 </form>
+
+<div class="footerholder">
+    <div class="footer">
+  		<p>Posted by: Gilvan Ferreira</p>
+  		<p>Contact information: <a href="mailto:gilvanfcf77@gmail.com">
+  			gilvanfcf77@gmail.com</a>.</p>
+	</div>
+</div> 
