--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,16 +40,22 @@ input[type=submit] {
     border-radius: 5px; 
 }
 
+
+input[type=text] {
+    padding:25px 60px; 
+    background:#ccc; 
+    border:1;
+    border-radius: 5px; 
+    word-wrap: break-word;
+    word-break: break-all;
+    height: 80px;
+}
+
 .footerholder {
-    background: none repeat scroll 0 0 transparent;
     bottom: 0;
-    position: fixed;
     text-align: center;
-    width: 100%;
 }
 
 .footer {
-    height: 100px;
     margin: auto;
-    width: 400px;
 }
